tests/if/fun_in_else.lox
// error
if (true) "ok"; else fun foo() {}
